Java17 (#1417)
* java 17 changes

* java 17 changes

* add fixes

---------

Co-authored-by: GIlca <gabriel.ilca@microfocus.com>
Co-authored-by: Larisa Bratean <larisa-alexandra.bratean@microfocus.com>
Co-authored-by: Larisa Bratean <lbratean@opentext.com>