@@ -45,14 +45,14 @@
         <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
-        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
+        <maven-dependency-plugin.version>3.6.0</maven-dependency-plugin.version>
         <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
         <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
         <maven-scm-plugin.version>1.12.0</maven-scm-plugin.version>
         <!--Project dependencies-->
-        <spring.version>5.3.32</spring.version>
+        <spring.version>6.0.3</spring.version>
         <hamcrest.version>1.3</hamcrest.version>
         <score.version>0.4.0</score.version>
         <h2.version>2.1.214</h2.version>
@@ -60,8 +60,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <score.group>io.cloudslang</score.group>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <custom.nexus>overwritten_by_ci</custom.nexus>
     </properties>
 
@@ -316,6 +316,12 @@
                 <version>2.6</version>
             </dependency>
 
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>2.1.1</version>
+            </dependency>
+
             <!-- spring artifacts -->
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -486,7 +492,7 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.6</version>
+                    <version>0.8.12</version>
                     <executions>
                         <execution>
                             <id>prepare-agent</id>
@@ -599,7 +605,7 @@
                                     <ignoredUnusedDeclaredDependency>com.h2database:h2:jar:${h2.version}
                                     </ignoredUnusedDeclaredDependency>
 
-                                    <ignoredUnusedDeclaredDependency>org.python:jython-standalone:jar:2.7.2
+                                    <ignoredUnusedDeclaredDependency>org.python:jython-standalone:jar:*
                                     </ignoredUnusedDeclaredDependency>
                                     <ignoredUnusedDeclaredDependency>org.liquibase:liquibase-core:jar:4.9.0
                                     </ignoredUnusedDeclaredDependency>
@@ -703,6 +709,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <compilerArgs>
+                            <!-- Added to avoid warnings in logs -->
+                            <arg>-parameters</arg>
+                        </compilerArgs>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -715,7 +727,12 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
                         <runOrder>alphabetical</runOrder>
-                        <argLine>-Xmx512m -XX:MaxPermSize=1024m</argLine>
+                        <argLine>
+                            -Xmx512m
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.io=ALL-UNNAMED
+                            --add-opens java.base/java.net=ALL-UNNAMED
+                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
